[package]
name = "wasm"
version = "0.1.0"
edition = "2024"
authors = ["Santosh Shrestha <santoshxshrestha@gmail.com"]
description = "WASM module for encrypty"
license = "MIT"
homepage = "https://github.com/santoshxshrestha/encrypty"
documentation = "https://github.com/santoshxshrestha/encrypty#readme"
repository = "https://github.com/santoshxshrestha/encrypty"
readme = "README.md"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.106"
